# data_assimilation_toolbox

./: .gitignore  README.md  pyproject.toml
NLD_Paper/t21_80_0.05_30/: config.csv
NLD_Paper/t21_80_0.05_30/ensemble_0/: ensemble_member_0.nc  ensemble_member_1.nc  ensemble_member_10.nc  ensemble_member_11.nc  ensemble_member_12.nc  ensemble_member_13.nc  ensemble_member_14.nc  ensemble_member_15.nc  ensemble_member_16.nc  ensemble_member_17.nc  ensemble_member_18.nc  ensemble_member_19.nc  ensemble_member_2.nc  ensemble_member_20.nc  ensemble_member_21.nc  ensemble_member_22.nc  ensemble_member_23.nc  ensemble_member_24.nc  ensemble_member_25.nc  ensemble_member_26.nc  ensemble_member_27.nc  ensemble_member_28.nc  ensemble_member_29.nc  ensemble_member_3.nc  ensemble_member_30.nc  ensemble_member_31.nc  ensemble_member_32.nc  ensemble_member_33.nc  ensemble_member_34.nc  ensemble_member_35.nc  ensemble_member_36.nc  ensemble_member_37.nc  ensemble_member_38.nc  ensemble_member_39.nc  (+126 more)
amlcs/: __init__.py  amlcs_da.py  numerical_model.py  preprocessing.py  sequential_methods.py
amlcs/conf/: conf_pre.yaml
amlcs/numerical_model/: numerical_model.py
amlcs/numerical_models/: grid_resolution.py  numerical_model.py
amlcs/utils/: file_manager.py
data/: PSG0.npy  PSG1.npy  TG0.npy  TG1.npy  TRG0.npy  TRG1.npy  UG0.npy  UG1.npy  VG0.npy  VG1.npy  create_real_initial_condition.py  download.py  grib2speedy.py  initial_condition.nc  initial_condition_structure.nc  interpolation.ipynb  plot.ipynb
data/initial con/: create_nc_per_day.py  download.py  latitude.npy  level.npy
(+149 files in other folders)
